--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,5 +15,9 @@ jobs:
           node-version: "16.x"
       - name: Install dependencies
         run: npm install
-      - name: Run test
-        run: npm test
+      - name: Build
+        run: npm run build --if-present
+      - name: Tests
+        run: echo 'No escribimos ninguna prueba xd"
+        
+        
