--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,6 @@ jobs:
       - name: Build
         run: npm run build --if-present
       - name: Tests
-        run: echo 'No escribimos ninguna prueba xd"
+        run: echo No escribimos ninguna prueba xd
         
         
