--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "nodejs",
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
+    "node-oauth2-server": "^2.4.0",
     "sequelize": "^6.20.1"
   },
   "devDependencies": {
