--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
     "lint": "eslint .",
-    "lint-fix":"eslint . --fix"
+    "lint-fix": "eslint . --fix"
   },
   "keywords": [
     "nodejs",
@@ -20,6 +20,7 @@
   "author": "bezkoder",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.1.3",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
