--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "node-oauth2-server": "^2.4.0",
+    "octokit": "^2.0.10",
     "sequelize": "^6.20.1"
   },
   "devDependencies": {
