oauth en servidor

--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ POOL_MAX=5
 POOL_MIN=0
 POOL_ACQUIRE=30000
 POOL_IDLE=10000
+CLIENT_ID = "dad3030ba2058c6371bf";
+CLIENT_SECRET = "f3f4dbc8d2ec820f11f54ef01268f5d879845f1d";
+CLIENT_URL="http://168.197.48.101:3000"
