--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sequelize": "^6.20.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.6.0",
     "eslint": "^8.27.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
