--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Node.js Rest Apis with Express, Sequelize & MySQL",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon server.js",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix"
@@ -39,6 +39,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.3.1",
     "nodemon": "^2.0.19"
   }
 }
